[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent.py"]

[project]
name = "beeai-minimal-example"
version = "0.0.1"
description = "Minimal agentic example for BeeAI framework"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "beeai-framework",
    "pydantic",
]